[workspace]
resolver = "2"
members = [
    "packages/drillshaft",
    "packages/drillshaft-build", "packages/drillshaft-env",
    "packages/drillshaft-registry"
]

[workspace.dependencies.cu]
package = "pistonite-cu"
version = "0.5.5"

[workspace.dependencies.pm]
package = "pistonite-pm"
version = "0.1.3"
default-features = false

[workspace.dependencies]
enum-map = "2.7.3"
enumset = "1.1.10"
